--- a/src/pages/Agent/AgentSidebar.module.css
+++ b/src/pages/Agent/AgentSidebar.module.css
@@ -294,8 +294,8 @@
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   transform: scale(1);
-  background-color: var(--brand-neon-cards-surface-light-yellow);
-  border-color: var(--brand-yellow-light);
+  background-color: var(--brand-neon-cards-surface-light-orange);
+  border-color: var(--brand-orange-light);
 }
 .buttonCardRewards:hover {
   transform: scale(1.03);
@@ -305,12 +305,11 @@
 }
 .rewardsTitle {
   font: 400 14px/20px "Satoshi-Regular", Helvetica, Arial, sans-serif;
-  color: var(--brand-yellow-dark);
+  color: var(--brand-orange-darker);
 }
 .rewardsSubtitle {
   font: 400 11px/16px "Satoshi-Regular", Helvetica, Arial, sans-serif;
-  color: var(--brand-yellow-dark);
-  opacity: 0.8;
+  color: var(--brand-orange-dark);
   white-space: nowrap;
 }
 
